Update discussion and conclusion

--- a/library.bib
+++ b/library.bib
@@ -1056,26 +1056,26 @@
 }
 
  @article{Gjoreski2020,
-  abstractnote = {This study introduces two datasets for multimodal research on cognitive load inference and personality traits. Different to other datasets in Affective Computing, which disregard participants&rsquo; personality traits or focus only on emotions, stress, or cognitive load from one specific task, the participants in our experiments performed seven different tasks in total. In the first dataset, 23 participants played a varying difficulty (easy, medium, and hard) game on a smartphone. In the second dataset, 23 participants performed six psychological tasks on a PC, again with varying difficulty. In both experiments, the participants filled personality trait questionnaires and marked their perceived cognitive load using NASA-TLX after each task. Additionally, the participants&rsquo; physiological response was recorded using a wrist device measuring heart rate, beat-to-beat intervals, galvanic skin response, skin temperature, and three-axis acceleration. The datasets allow multimodal study of physiological responses of individuals in relation to their personality and cognitive load. Various analyses of relationships between personality traits, subjective cognitive load (i.e., NASA-TLX), and objective cognitive load (i.e., task difficulty) are presented. Additionally, baseline machine learning models for recognizing task difficulty are presented, including a multitask learning (MTL) neural network that outperforms single-task neural network by simultaneously learning from the two datasets. The datasets are publicly available to advance the field of cognitive load inference using commercially available devices.},
-  author       = {Gjoreski, Martin and Kolenik, Tine and Knez, Timotej and Luštrek, Mitja and Gams, Matjaž and Gjoreski, Hristijan and Pejović, Veljko},
-  doi          = {10.3390/APP10113843},
-  issn         = {2076-3417},
-  journal      = {Applied Sciences 2020, Vol. 10, Page 3843},
-  month        = {May},
-  number       = {11},
-  pages        = {3843},
-  publisher    = {Multidisciplinary Digital Publishing Institute},
-  title        = {Datasets for Cognitive Load Inference Using Wearable Sensors and Psychological Traits},
-  volume       = {10},
-  year         = {2020}
+  author    = {Gjoreski, Martin and Kolenik, Tine and Knez, Timotej and Luštrek, Mitja and Gams, Matjaž and Gjoreski, Hristijan and Pejović, Veljko},
+  doi       = {10.3390/APP10113843},
+  issn      = {2076-3417},
+  journal   = {Applied Sciences 2020, Vol. 10, Page 3843},
+  month     = {May},
+  number    = {11},
+  pages     = {3843},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  title     = {Datasets for Cognitive Load Inference Using Wearable Sensors and Psychological Traits},
+  volume    = {10},
+  year      = {2020}
 }
 
 @article{Ishaque2021,
-  author  = {Syem Ishaque and Naimul Khan and Sri Krishnan},
+  author  = {Ishaque, Syem and Khan, Naimul and Krishnan, Sri},
+  doi     = {10.3389/fdgth.2021.639444},
+  issn    = {2673-253X},
   journal = {Frontiers in Digital Health},
   title   = {Trends in Heart-Rate Variability Signal Analysis},
   url     = {https://www.frontiersin.org/articles/10.3389/fdgth.2021.639444},
-  urldate = {2023-02-23},
   volume  = {3},
   year    = {2021}
 }
@@ -1525,17 +1525,6 @@
   year         = {2019}
 }
 
-@article{Ishaque2021,
-  author  = {Ishaque, Syem and Khan, Naimul and Krishnan, Sri},
-  doi     = {10.3389/fdgth.2021.639444},
-  issn    = {2673-253X},
-  journal = {Frontiers in Digital Health},
-  title   = {Trends in Heart-Rate Variability Signal Analysis},
-  url     = {https://www.frontiersin.org/articles/10.3389/fdgth.2021.639444},
-  volume  = {3},
-  year    = {2021}
-}
-
 @article{Fatisson2016,
   author  = {Julien Fatisson and Victor Oswald and François Lalonde},
   journal = {Heart International},
@@ -1612,7 +1601,7 @@
   note    = {PMID: 12384465},
   number  = {5},
   pages   = {H1873-H1886},
-  title   = {Poincaré plot interpretation using a physiological  model of HRV based on a network of oscillators},
+  title   = {Poincaré plot interpretation using a physiological model of HRV based on a network of oscillators},
   url     = {https://doi.org/10.1152/ajpheart.00405.2000},
   volume  = {283},
   year    = {2002}
@@ -3223,3 +3212,367 @@
 %!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %!   DISKUZE
 %!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+ @article{Nigusse2020,
+  author    = {Nigusse, Abreha Bayrau and Malengier, Benny and Mengistie, Desalegn Alemu and Tseghai, Granch Berhe and Van Langenhove, Lieva},
+  doi       = {10.3390/s20216233},
+  issn      = {1424-8220},
+  journal   = {Sensors},
+  month     = {Jan},
+  number    = {2121},
+  pages     = {6233},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Development of Washable Silver Printed Textile Electrodes for Long-Term ECG Monitoring},
+  volume    = {20},
+  year      = {2020}
+}
+
+@article{Nigusse2021,
+  author    = {Nigusse, Abreha Bayrau and Mengistie, Desalegn Alemu and Malengier, Benny and Tseghai, Granch Berhe and Langenhove, Lieva Van},
+  doi       = {10.3390/s21124174},
+  issn      = {1424-8220},
+  journal   = {Sensors},
+  month     = {Jan},
+  number    = {1212},
+  pages     = {4174},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Wearable Smart Textiles for Long-Term Electrocardiography Monitoring—A Review},
+  volume    = {21},
+  year      = {2021}
+}
+
+@article{Bijl2022,
+  author    = {van der Bijl, Kirina and Elgendi, Mohamed and Menon, Carlo},
+  doi       = {10.3390/diagnostics12112578},
+  issn      = {2075-4418},
+  journal   = {Diagnostics},
+  month     = {Nov},
+  number    = {1111},
+  pages     = {2578},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Automatic ECG Quality Assessment Techniques: A Systematic Review},
+  volume    = {12},
+  year      = {2022}
+}
+
+@article{Satija2018,
+  author  = {Satija, Udit and Ramkumar, Barathram and Manikandan, M. Sabarimalai},
+  doi     = {10.1109/RBME.2018.2810957},
+  issn    = {1941-1189},
+  journal = {IEEE Reviews in Biomedical Engineering},
+  pages   = {36–52},
+  title   = {A Review of Signal Processing Techniques for Electrocardiogram Signal Quality Assessment},
+  volume  = {11},
+  year    = {2018}
+}
+
+@article{Clark2015,
+  author    = {Clark, Tom S. and Linzer, Drew A.},
+  doi       = {10.1017/psrm.2014.32},
+  issn      = {2049-8470, 2049-8489},
+  journal   = {Political Science Research and Methods},
+  month     = {May},
+  number    = {2},
+  pages     = {399–408},
+  publisher = {Cambridge University Press},
+  title     = {Should I Use Fixed or Random Effects?},
+  volume    = {3},
+  year      = {2015}
+}
+
+@article{Gomes2022,
+  author  = {Gomes, Dylan G.E.},
+  doi     = {10.7717/peerj.12794},
+  issn    = {2167-8359},
+  journal = {PeerJ},
+  month   = {Jan},
+  pages   = {e12794},
+  title   = {Should I use fixed effects or random effects when I have fewer than five levels of a grouping factor in a mixed-effects model?},
+  volume  = {10},
+  year    = {2022}
+}
+
+@article{Winter2013,
+  author    = {Winter, De and C .f, J.},
+  issn      = {1531-7714},
+  journal   = {Practical Assessment, Research \& Evaluation},
+  month     = {Aug},
+  number    = {10},
+  publisher = {Center for Educational Assessment},
+  title     = {Using the Student’s “t”-Test with Extremely Small Sample Sizes},
+  url       = {https://eric.ed.gov/?id=EJ1015748},
+  volume    = {18},
+  year      = {2013}
+}
+
+@article{Muth2016,
+  author  = {Muth, Chelsea and Bales, Karen L. and Hinde, Katie and Maninger, Nicole and Mendoza, Sally P. and Ferrer, Emilio},
+  doi     = {10.1177/0013164415580432},
+  issn    = {1552-3888},
+  journal = {Educational and Psychological Measurement},
+  month   = {Feb},
+  number  = {1},
+  pages   = {64–87},
+  title   = {Alternative Models for Small Samples in Psychological Research: Applying Linear Mixed Effects Models and Generalized Estimating Equations to Repeated Measures Data},
+  volume  = {76},
+  year    = {2016}
+}
+
+@article{Green2016,
+  author  = {Green, Peter and MacLeod, Catriona J.},
+  doi     = {10.1111/2041-210X.12504},
+  issn    = {2041-210X},
+  journal = {Methods in Ecology and Evolution},
+  number  = {4},
+  pages   = {493–498},
+  title   = {SIMR: an R package for power analysis of generalized linear mixed models by simulation},
+  volume  = {7},
+  year    = {2016}
+}
+
+@inbook{Bolker2008,
+  author    = {Bolker, Benjamin M.},
+  booktitle = {Ecological Models and Data in R},
+  doi       = {10.1515/9781400840908},
+  isbn      = {978-1-4008-4090-8},
+  month     = {Jul},
+  publisher = {Princeton University Press},
+  title     = {Ecological Models and Data in R},
+  url       = {https://www.degruyter.com/document/doi/10.1515/9781400840908/html?lang=en},
+  year      = {2008}
+}
+
+@article{Johnson2015,
+  author  = {Johnson, Paul C. D. and Barry, Sarah J. E. and Ferguson, Heather M. and Müller, Pie},
+  doi     = {10.1111/2041-210X.12306},
+  issn    = {2041-210X},
+  journal = {Methods in Ecology and Evolution},
+  month   = {Feb},
+  number  = {2},
+  pages   = {133–142},
+  title   = {Power analysis for generalized linear mixed models in ecology and evolution},
+  volume  = {6},
+  year    = {2015}
+}
+
+@article{Chappell2013,
+  author  = {Chappell, Steven P. and Abercromby, Andrew F. and Gernhardt, Michael L.},
+  doi     = {10.1016/j.actaastro.2013.03.002},
+  issn    = {0094-5765},
+  journal = {Acta Astronautica},
+  month   = {Aug},
+  pages   = {166–178},
+  title   = {NEEMO 15: Evaluation of human exploration systems for near-Earth asteroids},
+  volume  = {89},
+  year    = {2013}
+}
+
+@article{Chambers2014,
+  author    = {Chambers, Christopher D. and Feredoes, Eva and Muthukumaraswamy, Suresh Daniel and Etchells, Peter},
+  doi       = {10.3934/Neuroscience.2014.1.4},
+  journal   = {AIMS Neuroscience},
+  month     = {May},
+  number    = {11},
+  pages     = {4–17},
+  publisher = {AIMS Press},
+  rights    = {cc_by},
+  title     = {Instead of “playing the game” it is time to change the rules: Registered Reports at AIMS Neuroscience and beyond},
+  volume    = {1},
+  year      = {2014}
+}
+
+@article{Szucs2016,
+  author    = {Szucs, Denes and Ioannidis, John PA},
+  doi       = {10.1101/095570},
+  month     = {Dec},
+  pages     = {095570},
+  publisher = {bioRxiv},
+  rights    = {© 2016, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+  title     = {When null hypothesis significance testing is unsuitable for research: a reassessment},
+  url       = {https://www.biorxiv.org/content/10.1101/095570v1},
+  year      = {2016}
+}
+
+@article{Benjamin2018,
+  author    = {Benjamin, Daniel J. and Berger, James O. and Johannesson, Magnus and Nosek, Brian A. and Wagenmakers, E.-J. and Berk, Richard and Bollen, Kenneth A. and Brembs, Björn and Brown, Lawrence and Camerer, Colin and Cesarini, David and Chambers, Christopher D. and Clyde, Merlise and Cook, Thomas D. and De Boeck, Paul and Dienes, Zoltan and Dreber, Anna and Easwaran, Kenny and Efferson, Charles and Fehr, Ernst and Fidler, Fiona and Field, Andy P. and Forster, Malcolm and George, Edward I. and Gonzalez, Richard and Goodman, Steven and Green, Edwin and Green, Donald P. and Greenwald, Anthony G. and Hadfield, Jarrod D. and Hedges, Larry V. and Held, Leonhard and Hua Ho, Teck and Hoijtink, Herbert and Hruschka, Daniel J. and Imai, Kosuke and Imbens, Guido and Ioannidis, John P. A. and Jeon, Minjeong and Jones, James Holland and Kirchler, Michael and Laibson, David and List, John and Little, Roderick and Lupia, Arthur and Machery, Edouard and Maxwell, Scott E. and McCarthy, Michael and Moore, Don A. and Morgan, Stephen L. and Munafó, Marcus and Nakagawa, Shinichi and Nyhan, Brendan and Parker, Timothy H. and Pericchi, Luis and Perugini, Marco and Rouder, Jeff and Rousseau, Judith and Savalei, Victoria and Schönbrodt, Felix D. and Sellke, Thomas and Sinclair, Betsy and Tingley, Dustin and Van Zandt, Trisha and Vazire, Simine and Watts, Duncan J. and Winship, Christopher and Wolpert, Robert L. and Xie, Yu and Young, Cristobal and Zinman, Jonathan and Johnson, Valen E.},
+  doi       = {10.1038/s41562-017-0189-z},
+  issn      = {2397-3374},
+  journal   = {Nature Human Behaviour},
+  month     = {Jan},
+  number    = {11},
+  pages     = {6–10},
+  publisher = {Nature Publishing Group},
+  rights    = {2017 The Author(s)},
+  title     = {Redefine statistical significance},
+  volume    = {2},
+  year      = {2018}
+}
+
+@article{Etz2016,
+  author    = {Etz, Alexander and Vandekerckhove, Joachim},
+  doi       = {10.1371/journal.pone.0149794},
+  issn      = {1932-6203},
+  journal   = {PLOS ONE},
+  month     = {Summer},
+  number    = {2},
+  pages     = {e0149794},
+  publisher = {Public Library of Science},
+  title     = {A Bayesian Perspective on the Reproducibility Project: Psychology},
+  volume    = {11},
+  year      = {2016}
+}
+
+@article{Ferreira2020,
+  author    = {Ferreira, David and Barthoulot, Mael and Pottecher, Julien and Torp, Klaus D. and Diemunsch, Pierre and Meyer, Nicolas},
+  doi       = {10.1016/j.bja.2020.04.092},
+  issn      = {0007-0912, 1471-6771},
+  journal   = {British Journal of Anaesthesia},
+  month     = {Aug},
+  number    = {2},
+  pages     = {201–207},
+  publisher = {Elsevier},
+  title     = {Theory and practical use of Bayesian methods in interpreting clinical trial data: a narrative review},
+  volume    = {125},
+  year      = {2020}
+}
+
+@article{Kruschke2012,
+  author    = {Kruschke, John K. and Aguinis, Herman and Joo, Harry},
+  doi       = {10.1177/1094428112457829},
+  issn      = {1094-4281},
+  journal   = {Organizational Research Methods},
+  month     = {Oct},
+  number    = {4},
+  pages     = {722–752},
+  publisher = {SAGE Publications Inc},
+  title     = {The Time Has Come: Bayesian Methods for Data Analysis in the Organizational Sciences},
+  volume    = {15},
+  year      = {2012}
+}
+
+@article{Winkler2001,
+  author  = {Winkler, R. L.},
+  doi     = {10.1017/s026646230110406x},
+  issn    = {0266-4623},
+  journal = {International Journal of Technology Assessment in Health Care},
+  number  = {1},
+  pages   = {56–66},
+  title   = {Why Bayesian analysis hasn’t caught on in healthcare decision making},
+  volume  = {17},
+  year    = {2001}
+}
+
+@article{Kruschke2010,
+  author  = {Kruschke, John K.},
+  doi     = {10.1016/j.tics.2010.05.001},
+  issn    = {1364-6613},
+  journal = {Trends in Cognitive Sciences},
+  month   = {Jul},
+  number  = {7},
+  pages   = {293–300},
+  title   = {What to believe: Bayesian methods for data analysis},
+  volume  = {14},
+  year    = {2010}
+}
+
+@article{Lafere2021,
+  author  = {Lafère, Pierre and Lambrechts, Kate and Germonpré, Peter and Balestra, Ambre and Germonpré, Faye Lisa and Marroni, Alessandro and Cialoni, Danilo and Bosco, Gerardo and Balestra, Costantino},
+  issn    = {1664-042X},
+  journal = {Frontiers in Physiology},
+  title   = {Heart Rate Variability During a Standard Dive: A Role for Inspired Oxygen Pressure?},
+  url     = {https://www.frontiersin.org/articles/10.3389/fphys.2021.635132},
+  volume  = {12},
+  year    = {2021}
+}
+
+@article{Lund2000,
+  author  = {Lund, V. and Kentala, E. and Scheinin, H. and Klossner, J. and Sariola-Heinonen, K. and Jalonen, J.},
+  doi     = {10.1046/j.1365-201x.2000.00761.x},
+  issn    = {0001-6772},
+  journal = {Acta Physiologica Scandinavica},
+  month   = {Sep},
+  number  = {1},
+  pages   = {39–44},
+  title   = {Hyperbaric oxygen increases parasympathetic activity in professional divers},
+  volume  = {170},
+  year    = {2000}
+}
+
+@article{Lund1999,
+  author  = {Lund, V. E. and Kentala, E. and Scheinin, H. and Klossner, J. and Helenius, H. and Sariola-Heinonen, K. and Jalonen, J.},
+  doi     = {10.1046/j.1365-201x.1999.00581.x},
+  issn    = {0001-6772},
+  journal = {Acta Physiologica Scandinavica},
+  month   = {Sep},
+  number  = {1},
+  pages   = {29–35},
+  title   = {Heart rate variability in healthy volunteers during normobaric and hyperbaric hyperoxia},
+  volume  = {167},
+  year    = {1999}
+}
+
+@article{Ma2022,
+  author  = {Ma, Chenbin and Xu, Haoran and Yan, Muyang and Huang, Jie and Yan, Wei and Lan, Ke and Wang, Jing and Zhang, Zhengbo},
+  issn    = {1664-042X},
+  journal = {Frontiers in Physiology},
+  title   = {Longitudinal Changes and Recovery in Heart Rate Variability of Young Healthy Subjects When Exposure to a Hypobaric Hypoxic Environment},
+  url     = {https://www.frontiersin.org/articles/10.3389/fphys.2021.688921},
+  volume  = {12},
+  year    = {2022}
+}
+
+@inbook{Goyal2023,
+  address    = {Treasure Island (FL)},
+  author     = {Goyal, Amandeep and Chonis, Tyler and Bhyan, Poonam and Cooper, Jeffrey S.},
+  booktitle  = {StatPearls},
+  callnumber = {NBK482231},
+  publisher  = {StatPearls Publishing},
+  rights     = {Copyright © 2023, StatPearls Publishing LLC.},
+  title      = {Hyperbaric Cardiovascular Effects},
+  url        = {http://www.ncbi.nlm.nih.gov/books/NBK482231/},
+  year       = {2023}
+}
+
+@article{Paula2019,
+  author  = {Paula-Ribeiro, Marcelle and Ribeiro, Indyanara C. and Aranda, Liliane C. and Silva, Talita M. and Costa, Camila M. and Ramos, Roberta P. and Ota-Arakaki, Jaquelina S. and Cravo, Sergio L. and Nery, Luiz E. and Stickland, Michael K. and Silva, Bruno M.},
+  doi     = {10.1113/JP277190},
+  issn    = {1469-7793},
+  journal = {The Journal of Physiology},
+  number  = {5},
+  pages   = {1347–1360},
+  rights  = {© 2019 The Authors. The Journal of Physiology © 2019 The Physiological Society},
+  title   = {Carotid chemoreflex activity restrains post-exercise cardiac autonomic control in healthy humans and in patients with pulmonary arterial hypertension},
+  volume  = {597},
+  year    = {2019}
+}
+
+@article{Forte2019,
+  author  = {Forte, Giuseppe and Favieri, Francesca and Casagrande, Maria},
+  issn    = {1662-453X},
+  journal = {Frontiers in Neuroscience},
+  title   = {Heart Rate Variability and Cognitive Function: A Systematic Review},
+  url     = {https://www.frontiersin.org/articles/10.3389/fnins.2019.00710},
+  volume  = {13},
+  year    = {2019}
+}
+
+@article{Monti2003,
+  author  = {Monti, Stefano and Tamayo, Pablo and Mesirov, Jill and Golub, Todd},
+  doi     = {10.1023/A:1023949509487},
+  issn    = {1573-0565},
+  journal = {Machine Learning},
+  month   = {Jul},
+  number  = {1},
+  pages   = {91–118},
+  title   = {Consensus Clustering: A Resampling-Based Method for Class Discovery and Visualization of Gene Expression Microarray Data},
+  volume  = {52},
+  year    = {2003}
+}
+
+
+
+
+
